--- a/marevan.html
+++ b/marevan.html
@@ -6,22 +6,35 @@
 <title>Marevan (Warfarin) – dhiig-khafiifin</title>
 
 <style>
+:root{
+  --c1:#0066cc;
+  --c2:#00a676;
+  --accent:#00a676;
+  --link:#00509e;
+}
+
 /* UNIVERSAL DESIGN (samme som dine andre filer) */
 body { font-family: Arial, sans-serif; background:#e6f2f8; color:#123047; margin:0; }
-header { background:linear-gradient(135deg,#0066cc,#00a676); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15);}
+
+header {
+  background:linear-gradient(135deg,var(--c1),var(--c2));
+  color:#fff; padding:22px 16px; text-align:center;
+  box-shadow:0 2px 8px rgba(0,0,0,0.15);
+}
 header h1 { margin:0 0 4px; font-size:1.8rem; }
 header p { margin:0; font-size:0.95rem; }
 
 main { max-width:820px; margin:18px auto 32px; padding:0 14px; }
 
-a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:#00509e; font-size:0.9rem; }
+a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:var(--link); font-size:0.9rem; }
 a.back span { font-size:1.1rem; }
 
+/* Language bar */
 .langbar{
   display:flex; align-items:center; gap:10px; flex-wrap:wrap;
   background:#ffffff; border-radius:12px; padding:10px 12px;
   margin:0 0 14px 0; box-shadow:0 2px 8px rgba(15,23,42,0.10);
-  border-left:4px solid #00a676;
+  border-left:4px solid var(--accent);
 }
 .langbar label{ font-size:0.9rem; color:#123047; font-weight:600; }
 .langbar select{
@@ -29,11 +42,13 @@ a.back span { font-size:1.1rem; }
   background:#fff; color:#123047; font-size:0.9rem; max-width:100%;
 }
 
+/* Card */
 .card {
   background:#ffffff; border-radius:14px; padding:16px 16px 10px; margin-bottom:14px;
-  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid #00a676;
+  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid var(--accent);
 }
 
+/* Meta */
 .drug-meta{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; margin-bottom:8px; }
 .drug-info{ display:flex; align-items:center; gap:10px; }
 .drug-icon{ width:44px; height:44px; border-radius:12px; background:#e3f2fd; display:flex; align-items:center; justify-content:center; }
@@ -43,6 +58,7 @@ a.back span { font-size:1.1rem; }
 .drug-form{ font-size:0.82rem; color:#29516e; }
 .badge{ display:inline-flex; align-items:center; gap:4px; background:#d9f6e8; color:#16634a; padding:4px 10px; border-radius:999px; font-size:0.8rem; }
 
+/* Sections */
 .section{ margin-top:8px; padding-top:8px; border-top:1px dashed #d0d7e2; }
 .section-header{ display:flex; align-items:center; gap:8px; margin-bottom:4px; }
 .section-icon{
@@ -198,6 +214,27 @@ a.back span { font-size:1.1rem; }
 <script>
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
+const THEME = {
+  so:{c1:"#0066cc",c2:"#00a676",accent:"#00a676",link:"#00509e"},
+  da:{c1:"#0b5ed7",c2:"#198754",accent:"#198754",link:"#0b5ed7"},
+  en:{c1:"#0d6efd",c2:"#20c997",accent:"#20c997",link:"#0d6efd"},
+  ar:{c1:"#7c3aed",c2:"#0ea5e9",accent:"#0ea5e9",link:"#1d4ed8"},
+  tr:{c1:"#dc2626",c2:"#16a34a",accent:"#16a34a",link:"#b91c1c"},
+  ur:{c1:"#0f766e",c2:"#22c55e",accent:"#22c55e",link:"#0f766e"},
+  fa:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  prs:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  ps:{c1:"#1e40af",c2:"#16a34a",accent:"#16a34a",link:"#1e40af"}
+};
+
+function applyTheme(lang){
+  const t = THEME[lang] || THEME.so;
+  const r = document.documentElement.style;
+  r.setProperty("--c1", t.c1);
+  r.setProperty("--c2", t.c2);
+  r.setProperty("--accent", t.accent);
+  r.setProperty("--link", t.link);
+}
+
 function stripTags(s){
   return String(s || "").replace(/<[^>]*>?/gm, "");
 }
@@ -227,7 +264,7 @@ const T = {
     sideTitle: "Waxyeellooyinka (Bivirkninger)",
     side: [
       "Dhiig-bax fudud: nabarro si fudud u soo baxa, sanka ama cirridka oo dhiig ka yimaado.",
-      "Dhiig-bax khatar ah: saxaro madow, matag dhiig leh, madax-xanuun daran → raadi gargaar degdeg ah."
+      "Dhiig-bax khatar ah: saxaro madow, matag dhiig leh, madax-xanuun daran → La xiriir dhakhtarkaaga."
     ],
 
     interTitle: "Isdhexgalka daawooyinka (Interaktioner)",
@@ -250,7 +287,7 @@ const T = {
 
     foodTitle: "Cunto iyo cabitaan (Mad og drikke)",
     food: [
-      "Ka fogow khamri badan; waxay kordhin kartaa khatarta dhiig-baxa.",
+      "Ka fogow khamri badan; wuxuu kordhin karaa in aad dawakhdo, sidoo kalena wuxuu kordhin karaa khatarta dhiig-baxa.",
       "Cuntooyinka cagaaran: ujeedadu ma aha inaad joojiso, balse <span class='highlight'>joogteeyso</span> (isku heer maalin kasta)."
     ],
 
@@ -258,7 +295,7 @@ const T = {
     store: [
       "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.",
       "Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.",
-      "Ha qaadan marka ay dhaafto “EXP” ama haddii midab/qaab isbeddelo.",
+      "Ha qaadan marka ay dhaafto taariikhda dhacitaanka ama haddii midab/qaab isbeddelo.",
       "Wixii soo haray → weydii farmashiyaha si loogu tuuro meesha ku habboon."
     ],
 
@@ -290,7 +327,7 @@ const T = {
     sideTitle: "Bivirkninger",
     side: [
       "Let blødning: nemme blå mærker, næseblod eller blødning fra tandkød.",
-      "Alvorlig blødning: sort afføring, blodig opkast, kraftig hovedpine → søg akut hjælp."
+      "Alvorlig blødning: sort afføring, blodig opkast, kraftig hovedpine → Kontakt din læge."
     ],
 
     interTitle: "Interaktioner",
@@ -313,7 +350,7 @@ const T = {
 
     foodTitle: "Mad og drikke",
     food: [
-      "Undgå meget alkohol – det kan øge risikoen for blødning.",
+      "Undgå meget alkohol – det kan gøre dig mere svimmel og øge risikoen for blødning.",
       "Grøntsager med K-vitamin: du behøver ikke stoppe – men spis nogenlunde <span class='highlight'>ens</span> fra dag til dag."
     ],
 
@@ -321,7 +358,7 @@ const T = {
     store: [
       "Opbevares utilgængeligt for børn og under 25 °C.",
       "Opbevar i original emballage for at beskytte mod lys og fugt.",
-      "Brug ikke efter “EXP” eller hvis tabletterne ændrer udseende.",
+      "Brug ikke efter udløbsdatoen eller hvis tabletterne ændrer udseende.",
       "Aflever rester på apoteket."
     ],
 
@@ -353,7 +390,7 @@ const T = {
     sideTitle: "Side effects",
     side: [
       "Minor bleeding: easy bruising, nosebleeds, or gum bleeding.",
-      "Serious bleeding: black stools, vomiting blood, severe headache → seek urgent care."
+      "Serious bleeding: black stools, vomiting blood, severe headache → Contact your doctor."
     ],
 
     interTitle: "Interactions",
@@ -376,7 +413,7 @@ const T = {
 
     foodTitle: "Food and drink",
     food: [
-      "Avoid heavy alcohol intake; it can increase bleeding risk.",
+      "Avoid heavy alcohol intake — it can make you more dizzy and increase bleeding risk.",
       "Vitamin K foods: you do not need to stop them — keep intake <span class='highlight'>steady</span> each day."
     ],
 
@@ -384,21 +421,20 @@ const T = {
     store: [
       "Keep out of reach of children and below 25 °C.",
       "Store in the original pack to protect from light and moisture.",
-      "Do not use after “EXP” or if tablets change appearance.",
+      "Do not use after the expiry date or if tablets change appearance.",
       "Return leftovers to the pharmacy."
     ],
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
     footer2: "Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
-  },
-
-  /* ar/tr/ur/fa/prs/ps: behold dine tekster ovenfor (eller udvid her) */
+  }
 };
 
 function setDirLang(lang){
   document.documentElement.lang = lang;
   document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
 }
+
 function fillList(id, arr){
   const ul = document.getElementById(id);
   ul.innerHTML = "";
@@ -408,7 +444,10 @@ function fillList(id, arr){
     ul.appendChild(li);
   });
 }
+
 function applyLang(lang){
+  applyTheme(lang);
+
   const d = T[lang] || T.so;
   setDirLang(lang);
 
