--- a/xarelto.html
+++ b/xarelto.html
@@ -6,21 +6,33 @@
 <title>Xarelto (Rivaroxaban) – dhiig-khafiifin</title>
 
 <style>
+:root{
+  --c1:#0066cc;
+  --c2:#00a676;
+  --accent:#00a676;
+  --link:#00509e;
+}
+
 body { font-family: Arial, sans-serif; background:#e6f2f8; color:#123047; margin:0; }
-header { background:linear-gradient(135deg,#0066cc,#00a676); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15); }
-header h1 { margin:0 0 4px; font-size:1.8rem; }
-header p { margin:0; font-size:0.95rem; }
 
-main { max-width:820px; margin:18px auto 32px; padding:0 14px; }
+header{
+  background:linear-gradient(135deg,var(--c1),var(--c2));
+  color:#fff; padding:22px 16px; text-align:center;
+  box-shadow:0 2px 8px rgba(0,0,0,0.15);
+}
+header h1{ margin:0 0 4px; font-size:1.8rem; }
+header p{ margin:0; font-size:0.95rem; }
 
-a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:#00509e; font-size:0.9rem; }
-a.back span { font-size:1.1rem; }
+main{ max-width:820px; margin:18px auto 32px; padding:0 14px; }
+
+a.back{ display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:var(--link); font-size:0.9rem; }
+a.back span{ font-size:1.1rem; }
 
 .langbar{
   display:flex; align-items:center; gap:10px; flex-wrap:wrap;
   background:#ffffff; border-radius:12px; padding:10px 12px;
   margin:0 0 14px 0; box-shadow:0 2px 8px rgba(15,23,42,0.10);
-  border-left:4px solid #00a676;
+  border-left:4px solid var(--accent);
 }
 .langbar label{ font-size:0.9rem; color:#123047; font-weight:600; }
 .langbar select{
@@ -30,7 +42,7 @@ a.back span { font-size:1.1rem; }
 
 .card{
   background:#ffffff; border-radius:14px; padding:16px 16px 10px; margin-bottom:14px;
-  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid #00a676;
+  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid var(--accent);
 }
 
 .drug-meta{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; margin-bottom:8px; }
@@ -185,6 +197,27 @@ a.back span { font-size:1.1rem; }
 <script>
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
+const THEME = {
+  so:{c1:"#0066cc",c2:"#00a676",accent:"#00a676",link:"#00509e"},
+  da:{c1:"#0b5ed7",c2:"#198754",accent:"#198754",link:"#0b5ed7"},
+  en:{c1:"#0d6efd",c2:"#20c997",accent:"#20c997",link:"#0d6efd"},
+  ar:{c1:"#7c3aed",c2:"#0ea5e9",accent:"#0ea5e9",link:"#1d4ed8"},
+  tr:{c1:"#dc2626",c2:"#16a34a",accent:"#16a34a",link:"#b91c1c"},
+  ur:{c1:"#0f766e",c2:"#22c55e",accent:"#22c55e",link:"#0f766e"},
+  fa:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  prs:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  ps:{c1:"#1e40af",c2:"#16a34a",accent:"#16a34a",link:"#1e40af"}
+};
+
+function applyTheme(lang){
+  const t = THEME[lang] || THEME.so;
+  const r = document.documentElement.style;
+  r.setProperty("--c1", t.c1);
+  r.setProperty("--c2", t.c2);
+  r.setProperty("--accent", t.accent);
+  r.setProperty("--link", t.link);
+}
+
 function stripTags(s){
   return String(s || "").replace(/<[^>]*>?/gm, "");
 }
@@ -202,49 +235,50 @@ const T = {
 
     sec1Title: "Isticmaalka (Anvendelse)",
     sec1: [
-      "Xarelto (<span class='highlight'>rivaroxaban</span>) waa dhiig-khafiifin casri ah, oo ka hortaga xinjirow dhiigga lugaha, sambabada, ama wadne-gariirka."
+      "Xarelto (<span class='highlight'>rivaroxaban</span>) waa dhiig-khafiifin casri ah oo ka hortaga xinjirowga dhiigga (blodpropper)."
     ],
 
     sec2Title: "Qiyaasta (Dosering)",
     sec2: [
-      "Badanaa hal mar maalintii; mararka qaarkood laba jeer maalintii bilowga.",
-      "Qaado sida uu dhakhtarku kuu qoray; <span class='highlight'>ha ka boodin qiyaasta</span>."
+      "Qaado sida uu dhakhtarku kuu qoray. Badanaa hal mar maalintii; mararka qaarkood laba jeer maalintii bilowga.",
+      "Ha ka boodin qiyaasta. Haddii aad seegto qiyaas, la xiriir dhakhtarkaaga."
     ],
 
     sec3Title: "Waxyeellooyinka (Bivirkninger)",
     sec3: [
-      "Dhiig-bax fudud (sanka, cirridka, ama nabro).",
-      "Dhiig-bax gudaha ah (dhif balse khatar ah): la xiriir dhakhtarka haddii <span class='highlight'>saxaro madow</span> ama <span class='highlight'>kaadi gaduud</span> ay soo baxaan."
+      "Dhiig-bax fudud (sanka, cirridka, ama nabro si fudud u soo baxa).",
+      "Dhiig-bax khatar ah: saxaro madow, matag dhiig leh, ama kaadi gaduud → La xiriir dhakhtarkaaga."
     ],
 
     sec4Title: "Isdhexgalka daawooyinka (Interaktioner)",
     sec4: [
       "Ha qaadan NSAID (tusaale ibuprofen/naproxen) ama aspirin adigoon talo ka helin dhakhtarka.",
-      "Daawooyinka qaar ee fangaska iyo antibiyootikada waxay kordhiyaan heerka Xarelto."
+      "Daawooyinka qaar (tusaale qaar ka mid ah antibiyootikada ama daawooyinka fangaska) waxay kordhin karaan khatarta dhiig-baxa."
     ],
 
     sec5Title: "Digniino (Advarsler)",
     sec5: [
-      "Go'aan kaligaa ha qaadan (ha joojin adiga oo aan la tashan) — xinjiro cusub ayaa samaysmi kara.",
-      "U sheeg dhakhtarka haddii aad u socoto qalliin ama daaweyn ilkaha."
+      "Ha joojin daawada adiga oo aan la tashan dhakhtar — xinjiro cusub ayaa samaysmi kara.",
+      "U sheeg dhakhtarka/takhtarka ilkaha haddii aad u socoto qalliin ama daaweyn ilkaha."
     ],
 
     sec6Title: "Ramadaan iyo soonka (Ramadan og faste)",
     sec6: [
-      "Haddii hal mar maalintii la qaato, waxaa fiican in lagu qaato <span class='highlight'>fiidkii cuntada ka dib</span>.",
-      "Ha qaadin qiyaas dheeraad ah xataa haddii aad seegto, adigoon talo ka helin dhakhtar."
+      "Haddii hal mar maalintii la qaato, badanaa waxaa lagu qaadan karaa <span class='highlight'>fiidkii (ka dib afurka)</span>.",
+      "Ha beddelin qiyaasta adiga oo aan talo ka helin dhakhtarka."
     ],
 
     sec7Title: "Cunto iyo cabitaan (Mad og drikke)",
     sec7: [
-      "Kiniinnada <span class='highlight'>15 mg</span> iyo <span class='highlight'>20 mg</span> waa in lagu qaataa <span class='highlight'>cuntada</span>, sababtoo ah cunistu waxay kordhisaa milanka daawada."
+      "Daawadan waxaa la qaadan karaa adigoon cunto cunin ama adigoo cunno la qaadanaya.",
+      "Haddii aad qaadanayso <span class='highlight'>15 mg</span> ama <span class='highlight'>20 mg</span>, waa in lagu qaataa <span class='highlight'>cunto</span> (si daawadu si fiican u milanto)."
     ],
 
     sec8Title: "Kaydinta daawada (Opbevaring)",
     sec8: [
-      "Ku hay daawada meel ka fog carruurta, kana hooseysa 25 °C.",
+      "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.",
       "Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.",
-      "Ha qaadan haddii ay dhaafto “EXP” ama haddii midabku isbeddelo.",
+      "Ha qaadan marka ay dhaafto taariikhda dhacitaanka ama haddii midab/qaab isbeddelo.",
       "Wixii soo haray u gee farmashiyaha."
     ],
 
@@ -264,25 +298,25 @@ const T = {
 
     sec1Title: "Anvendelse",
     sec1: [
-      "Xarelto (<span class='highlight'>rivaroxaban</span>) er et moderne blodfortyndende middel, der forebygger blodpropper i ben, lunger eller ved hjerteflimmer."
+      "Xarelto (<span class='highlight'>rivaroxaban</span>) er et blodfortyndende middel, der forebygger blodpropper."
     ],
 
     sec2Title: "Dosering",
     sec2: [
-      "Ofte 1 gang dagligt; nogle gange 2 gange dagligt i starten.",
-      "Tag som lægen har ordineret — <span class='highlight'>spring ikke doser over</span>."
+      "Tag medicinen præcis som lægen har ordineret (ofte 1 gang dagligt; nogle gange 2 gange dagligt i starten).",
+      "Hvis du glemmer en dosis: Kontakt din læge."
     ],
 
     sec3Title: "Bivirkninger",
     sec3: [
       "Let blødning (næse, tandkød, blå mærker).",
-      "Sjælden men alvorlig indre blødning: kontakt læge ved <span class='highlight'>sort afføring</span> eller <span class='highlight'>rød urin</span>."
+      "Tegn på alvorlig blødning: sort afføring, blodig opkast eller rød urin → Kontakt din læge."
     ],
 
     sec4Title: "Interaktioner",
     sec4: [
       "Undgå NSAID (fx ibuprofen/naproxen) og aspirin uden lægens råd.",
-      "Nogle svampemidler og visse antibiotika kan øge effekten/blødningsrisiko."
+      "Visse antibiotika og svampemidler kan øge blødningsrisikoen."
     ],
 
     sec5Title: "Advarsler",
@@ -293,19 +327,22 @@ const T = {
 
     sec6Title: "Ramadan og faste",
     sec6: [
-      "Hvis du tager det 1 gang dagligt, kan det ofte passe at tage det <span class='highlight'>om aftenen efter mad</span>.",
-      "Tag ikke ekstra dosis, hvis du har glemt en dosis, uden at følge lægens instruktion."
+      "Hvis du tager det 1 gang dagligt, passer det ofte at tage det <span class='highlight'>om aftenen efter iftar</span>.",
+      "Ændr ikke dosis uden aftale med lægen."
     ],
 
     sec7Title: "Mad og drikke",
     sec7: [
+      "Kan tages med eller uden mad.",
       "Tablet <span class='highlight'>15 mg</span> og <span class='highlight'>20 mg</span> skal tages <span class='highlight'>sammen med mad</span> (bedre optagelse)."
     ],
 
     sec8Title: "Opbevaring",
     sec8: [
-      "Opbevares utilgængeligt for børn og under 25 °C i original emballage.",
-      "Brug ikke efter “EXP”. Aflever rester på apoteket."
+      "Opbevares utilgængeligt for børn og under 25 °C.",
+      "Opbevar i original emballage for at beskytte mod lys og fugt.",
+      "Brug ikke efter udløbsdatoen eller hvis tabletterne ændrer udseende.",
+      "Aflever rester på apoteket."
     ],
 
     footer1: "Hvis du har brug for mere information, kontakt apoteket eller din læge.",
@@ -324,25 +361,25 @@ const T = {
 
     sec1Title: "Use",
     sec1: [
-      "Xarelto (<span class='highlight'>rivaroxaban</span>) is a modern blood thinner used to prevent blood clots in the legs, lungs, or with atrial fibrillation."
+      "Xarelto (<span class='highlight'>rivaroxaban</span>) is a blood thinner used to help prevent blood clots."
     ],
 
     sec2Title: "Dose",
     sec2: [
-      "Often once daily; sometimes twice daily at the beginning.",
-      "Take exactly as prescribed — <span class='highlight'>do not skip doses</span>."
+      "Take exactly as prescribed (often once daily; sometimes twice daily at the beginning).",
+      "If you miss a dose: Contact your doctor."
     ],
 
     sec3Title: "Side effects",
     sec3: [
       "Minor bleeding (nose, gums, easy bruising).",
-      "Rare but serious internal bleeding: contact a doctor if you notice <span class='highlight'>black stools</span> or <span class='highlight'>red urine</span>."
+      "Signs of serious bleeding: black stools, vomiting blood, or red urine → Contact your doctor."
     ],
 
     sec4Title: "Interactions",
     sec4: [
       "Avoid NSAIDs (e.g., ibuprofen/naproxen) and aspirin unless advised by a doctor.",
-      "Some antifungals and certain antibiotics can increase the effect/bleeding risk."
+      "Some antibiotics and antifungals can increase bleeding risk."
     ],
 
     sec5Title: "Warnings",
@@ -353,33 +390,34 @@ const T = {
 
     sec6Title: "Ramadan and fasting",
     sec6: [
-      "If taken once daily, it may fit to take it <span class='highlight'>in the evening after food</span>.",
-      "Do not take extra doses for a missed dose unless you follow your prescriber’s instructions."
+      "If taken once daily, it may fit to take it <span class='highlight'>in the evening after iftar</span>.",
+      "Do not change the dose without medical advice."
     ],
 
     sec7Title: "Food and drink",
     sec7: [
+      "Can be taken with or without food.",
       "<span class='highlight'>15 mg</span> and <span class='highlight'>20 mg</span> tablets must be taken <span class='highlight'>with food</span> for better absorption."
     ],
 
     sec8Title: "Storage",
     sec8: [
-      "Keep out of reach of children and below 25 °C in the original package.",
-      "Do not use after “EXP”. Return leftovers to the pharmacy."
+      "Keep out of reach of children and below 25 °C.",
+      "Store in the original pack to protect from light and moisture.",
+      "Do not use after the expiry date or if tablets change appearance.",
+      "Return leftovers to the pharmacy."
     ],
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
     footer2: "Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
-  },
-
-  /* Behold dine eksisterende ar/tr/ur/fa/prs/ps-tekster ved at indsætte dem her,
-     hvis du vil have alle sprog i samme fil. */
+  }
 };
 
 function setDirLang(lang){
   document.documentElement.lang = lang;
   document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
 }
+
 function fillList(id, arr){
   const ul = document.getElementById(id);
   ul.innerHTML = "";
@@ -389,13 +427,17 @@ function fillList(id, arr){
     ul.appendChild(li);
   });
 }
+
 function applyLang(lang){
+  applyTheme(lang);
+
   const d = T[lang] || T.so;
   setDirLang(lang);
 
   document.title = stripTags(d.pageTitle);
   document.getElementById("hdrH1").textContent = stripTags(d.hdrH1);
   document.getElementById("hdrP").textContent = d.hdrP;
+
   document.getElementById("backText").textContent = d.backText;
   document.getElementById("langLabel").textContent = d.langLabel;
 
