--- a/eliquis.html
+++ b/eliquis.html
@@ -6,23 +6,29 @@
 <title>Eliquis (Apixaban) – dhiig-khafiifin</title>
 
 <style>
-/* UNIVERSAL DESIGN (samme som dine andre filer) */
+:root{
+  --c1:#0066cc;
+  --c2:#00a676;
+  --accent:#00a676;
+  --link:#00509e;
+}
+
+/* UNIVERSAL DESIGN */
 body { font-family: Arial, sans-serif; background:#e6f2f8; color:#123047; margin:0; }
-header { background:linear-gradient(135deg,#0066cc,#00a676); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15); }
+header { background:linear-gradient(135deg,var(--c1),var(--c2)); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15); }
 header h1 { margin:0 0 4px; font-size:1.8rem; }
 header p { margin:0; font-size:0.95rem; }
 
 main { max-width:820px; margin:18px auto 32px; padding:0 14px; }
 
-a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:#00509e; font-size:0.9rem; }
+a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:var(--link); font-size:0.9rem; }
 a.back span { font-size:1.1rem; }
 
-/* Language bar */
 .langbar{
   display:flex; align-items:center; gap:10px; flex-wrap:wrap;
   background:#ffffff; border-radius:12px; padding:10px 12px;
   margin:0 0 14px 0; box-shadow:0 2px 8px rgba(15,23,42,0.10);
-  border-left:4px solid #00a676;
+  border-left:4px solid var(--accent);
 }
 .langbar label{ font-size:0.9rem; color:#123047; font-weight:600; }
 .langbar select{
@@ -30,13 +36,11 @@ a.back span { font-size:1.1rem; }
   background:#fff; color:#123047; font-size:0.9rem; max-width:100%;
 }
 
-/* Card */
 .card{
   background:#ffffff; border-radius:14px; padding:16px 16px 10px; margin-bottom:14px;
-  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid #00a676;
+  box-shadow:0 3px 10px rgba(15,23,42,0.12); border-top:4px solid var(--accent);
 }
 
-/* Meta */
 .drug-meta{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; margin-bottom:8px; }
 .drug-info{ display:flex; align-items:center; gap:10px; }
 .drug-icon{ width:44px; height:44px; border-radius:12px; background:#e3f2fd; display:flex; align-items:center; justify-content:center; }
@@ -46,12 +50,10 @@ a.back span { font-size:1.1rem; }
 .drug-form{ font-size:0.82rem; color:#29516e; }
 .badge{ display:inline-flex; align-items:center; gap:4px; background:#d9f6e8; color:#16634a; padding:4px 10px; border-radius:999px; font-size:0.8rem; }
 
-/* Sections */
 .section{ margin-top:8px; padding-top:8px; border-top:1px dashed #d0d7e2; }
 .section-header{ display:flex; align-items:center; gap:8px; margin-bottom:4px; }
 .section-icon{
-  width:24px; height:24px; border-radius:999px;
-  display:inline-flex; align-items:center; justify-content:center;
+  width:24px; height:24px; border-radius:999px; display:inline-flex; align-items:center; justify-content:center;
   font-size:0.9rem; color:#123047;
 }
 .section-icon.use{ background:#e3f2fd; }
@@ -70,7 +72,6 @@ a.back span { font-size:1.1rem; }
 .section ul li{ margin-bottom:4px; }
 
 .highlight{ font-weight:600; }
-
 .footer-note{ font-size:0.8rem; color:#607089; text-align:center; margin:18px 0 10px; }
 
 @media (max-width:600px){ header h1{ font-size:1.5rem; } }
@@ -104,8 +105,6 @@ a.back span { font-size:1.1rem; }
   <a href="index.html" class="back"><span>←</span><span id="backText">Ku laabo liiska daawooyinka</span></a>
 
   <div class="card">
-
-    <!-- META -->
     <div class="drug-meta">
       <div class="drug-info">
         <div class="drug-icon" aria-hidden="true">
@@ -204,6 +203,43 @@ a.back span { font-size:1.1rem; }
 <script>
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
+const THEME = {
+  so:{c1:"#0066cc",c2:"#00a676",accent:"#00a676",link:"#00509e"},
+  da:{c1:"#0b5ed7",c2:"#198754",accent:"#198754",link:"#0b5ed7"},
+  en:{c1:"#0d6efd",c2:"#20c997",accent:"#20c997",link:"#0d6efd"},
+  ar:{c1:"#7c3aed",c2:"#0ea5e9",accent:"#0ea5e9",link:"#1d4ed8"},
+  tr:{c1:"#dc2626",c2:"#16a34a",accent:"#16a34a",link:"#b91c1c"},
+  ur:{c1:"#0f766e",c2:"#22c55e",accent:"#22c55e",link:"#0f766e"},
+  fa:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  prs:{c1:"#2563eb",c2:"#a855f7",accent:"#a855f7",link:"#2563eb"},
+  ps:{c1:"#1e40af",c2:"#16a34a",accent:"#16a34a",link:"#1e40af"}
+};
+
+function applyTheme(lang){
+  const t = THEME[lang] || THEME.so;
+  const r = document.documentElement.style;
+  r.setProperty("--c1", t.c1);
+  r.setProperty("--c2", t.c2);
+  r.setProperty("--accent", t.accent);
+  r.setProperty("--link", t.link);
+}
+
+function setDirLang(lang){
+  document.documentElement.lang = lang;
+  document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
+}
+function stripTags(s){ return String(s || "").replace(/<[^>]*>?/gm, ""); }
+
+function fillList(id, arr){
+  const ul = document.getElementById(id);
+  ul.innerHTML = "";
+  (arr || []).forEach(txt => {
+    const li = document.createElement("li");
+    li.innerHTML = txt;
+    ul.appendChild(li);
+  });
+}
+
 const T = {
   so: {
     pageTitle:"Eliquis (Apixaban) – dhiig-khafiifin",
@@ -230,19 +266,19 @@ const T = {
     sideTitle:"Waxyeellooyinka (Bivirkninger)",
     side:[
       "Dhiig-bax fudud: sanka, cirridka, ama nabarro si fudud u soo baxa.",
-      "Dhiig-bax khatar ah (dhif): <span class='highlight'>saxaro madow</span>, <span class='highlight'>kaadi casaan/gaduud</span>, matag dhiig leh, madax-xanuun daran → raadi gargaar degdeg ah."
+      "Dhiig-bax khatar ah (dhif): <span class='highlight'>saxaro madow</span>, <span class='highlight'>kaadi casaan/gaduud</span>, matag dhiig leh, madax-xanuun daran → La xiriir dhakhtarkaaga."
     ],
 
     interTitle:"Isdhexgalka daawooyinka (Interaktioner)",
     inter:[
       "Ka taxaddar NSAID (tusaale ibuprofen/naproxen/diclofenac) iyo aspirin — ha qaadan adigoon talo ka helin dhakhtar/farmashiiste.",
-      "Daawooyinka qaar ee <span class='highlight'>fangaska</span> iyo <span class='highlight'>antibiyootikada</span> qaarkood waxay kordhin karaan saameynta/halista dhiig-baxa."
+      "Daawooyinka qaar ee <span class='highlight'>fangaska</span> iyo <span class='highlight'>antibiyootikada</span> qaarkood waxay kordhin karaan khatarta dhiig-baxa."
     ],
 
     warnTitle:"Digniino (Advarsler)",
     warn:[
       "Ha joojin Eliquis adiga oo aan la tashan dhakhtarka — xinjiro cusub ayaa samaysmi kara.",
-      "U sheeg dhakhtarka/tandlæge haddii aad u socoto qalliin ama daaweyn ilkaha."
+      "U sheeg dhakhtarka/takhtarka ilkaha haddii aad u socoto qalliin ama daaweyn ilkaha."
     ],
 
     ramTitle:"Ramadaan iyo soonka (Ramadan og faste)",
@@ -253,14 +289,14 @@ const T = {
 
     foodTitle:"Cunto iyo cabitaan (Mad og drikke)",
     food:[
-      "Daawadan waxaa la qaadan karaa <span class='highlight'>cunto la’aan</span> ama <span class='highlight'>cunto la socota</span>."
+      "Daawadan waxaa la qaadan karaa adigoon cunto cunin ama adigoo cunno la qaadanaya."
     ],
 
     storeTitle:"Kaydinta daawada (Opbevaring)",
     store:[
       "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.",
       "Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.",
-      "Ha qaadan daawada marka ay dhaafto “EXP” ama haddii midab/qaab isbeddelo.",
+      "Ha qaadan daawada marka ay dhaafto taariikhda dhacitaanka ama haddii midab/qaab isbeddelo.",
       "Wixii soo haray → ku celi farmashiyaha."
     ],
 
@@ -280,7 +316,7 @@ const T = {
 
     useTitle:"Anvendelse",
     use:[
-      "Eliquis (<span class='highlight'>apixaban</span>) er et moderne blodfortyndende lægemiddel, der forebygger blodpropper.",
+      "Eliquis (<span class='highlight'>apixaban</span>) er et blodfortyndende lægemiddel, der forebygger blodpropper.",
       "Bruges bl.a. ved blodprop i ben/lunger og ved <span class='highlight'>atrieflimren</span>."
     ],
 
@@ -293,13 +329,13 @@ const T = {
     sideTitle:"Bivirkninger",
     side:[
       "Let blødning: næseblod, blødning fra tandkød eller nemme blå mærker.",
-      "Sjælden men alvorlig blødning: <span class='highlight'>sort afføring</span>, <span class='highlight'>rød/mørk urin</span>, blodig opkast, stærk hovedpine → søg akut hjælp."
+      "Tegn på alvorlig blødning: <span class='highlight'>sort afføring</span>, <span class='highlight'>rød/mørk urin</span>, blodig opkast eller stærk hovedpine → Kontakt din læge."
     ],
 
     interTitle:"Interaktioner",
     inter:[
-      "Vær forsigtig med NSAID (fx ibuprofen/naproxen/diclofenac) og aspirin — brug kun efter aftale med læge/apotek.",
-      "Nogle svampemidler og visse antibiotika kan øge effekt/blødningsrisiko."
+      "Vær forsigtig med NSAID (fx ibuprofen/naproxen/diclofenac) og aspirin — kun efter aftale med læge/apotek.",
+      "Nogle svampemidler og visse antibiotika kan øge blødningsrisikoen."
     ],
 
     warnTitle:"Advarsler",
@@ -321,7 +357,7 @@ const T = {
     store:[
       "Opbevares utilgængeligt for børn og under 25 °C.",
       "Opbevar i original emballage for at beskytte mod lys og fugt.",
-      "Brug ikke efter “EXP” eller hvis tabletterne ændrer udseende.",
+      "Brug ikke efter udløbsdatoen eller hvis tabletterne ændrer udseende.",
       "Aflever rester på apoteket."
     ],
 
@@ -341,7 +377,7 @@ const T = {
 
     useTitle:"Use",
     use:[
-      "Eliquis (<span class='highlight'>apixaban</span>) is a modern blood thinner used to prevent blood clots.",
+      "Eliquis (<span class='highlight'>apixaban</span>) is a blood thinner used to prevent blood clots.",
       "Used for clots in the legs/lungs and in <span class='highlight'>atrial fibrillation</span>."
     ],
 
@@ -354,13 +390,13 @@ const T = {
     sideTitle:"Side effects",
     side:[
       "Minor bleeding: nosebleeds, gum bleeding, easy bruising.",
-      "Rare but serious bleeding: <span class='highlight'>black stools</span>, <span class='highlight'>red/dark urine</span>, vomiting blood, severe headache → seek urgent care."
+      "Signs of serious bleeding: <span class='highlight'>black stools</span>, <span class='highlight'>red/dark urine</span>, vomiting blood, severe headache → Contact your doctor."
     ],
 
     interTitle:"Interactions",
     inter:[
-      "Be cautious with NSAIDs (e.g., ibuprofen/naproxen/diclofenac) and aspirin — only use if advised by a doctor/pharmacist.",
-      "Some antifungals and certain antibiotics can increase the effect/bleeding risk."
+      "Be cautious with NSAIDs (e.g., ibuprofen/naproxen/diclofenac) and aspirin — only use if advised.",
+      "Some antifungals and certain antibiotics can increase bleeding risk."
     ],
 
     warnTitle:"Warnings",
@@ -382,42 +418,29 @@ const T = {
     store:[
       "Keep out of reach of children and below 25 °C.",
       "Store in the original pack to protect from light and moisture.",
-      "Do not use after “EXP” or if tablets change appearance.",
+      "Do not use after the expiry date or if tablets change appearance.",
       "Return leftovers to the pharmacy."
     ],
 
     footer1:"If you need more information, contact your pharmacy or doctor.",
     footer2:"Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
-  },
-
-  /* Du kan indsætte dine eksisterende ar/tr/ur/fa/prs/ps tekster her,
-     hvis du vil have dem med i samme fil. */
+  }
 };
 
-function setDirLang(lang){
-  document.documentElement.lang = lang;
-  document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
-}
-function fillList(id, arr){
-  const ul = document.getElementById(id);
-  ul.innerHTML = "";
-  (arr || []).forEach(txt => {
-    const li = document.createElement("li");
-    li.innerHTML = txt;
-    ul.appendChild(li);
-  });
-}
 function applyLang(lang){
+  applyTheme(lang);
   const d = T[lang] || T.so;
-  setDirLang(lang);
 
-  document.title = d.pageTitle;
-  document.getElementById("hdrH1").textContent = d.hdrH1;
+  setDirLang(lang);
+  document.title = stripTags(d.pageTitle);
+
+  document.getElementById("hdrH1").textContent = stripTags(d.hdrH1);
   document.getElementById("hdrP").textContent = d.hdrP;
+
   document.getElementById("backText").textContent = d.backText;
   document.getElementById("langLabel").textContent = d.langLabel;
 
-  document.getElementById("drugName").textContent = d.drugName;
+  document.getElementById("drugName").textContent = stripTags(d.drugName);
   document.getElementById("drugForm").textContent = d.drugForm;
   document.getElementById("badgeText").textContent = d.badgeText;
 
@@ -442,7 +465,6 @@ function applyLang(lang){
   document.getElementById("footer1").textContent = d.footer1;
   document.getElementById("footer2").innerHTML = d.footer2;
 
-  // keep language when going back
   const backA = document.querySelector("a.back");
   const base = backA.getAttribute("href").split("?")[0];
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
@@ -451,7 +473,6 @@ function applyLang(lang){
 // Start language from ?lang=
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
-
 document.getElementById("langSelect").value = (T[startLang] ? startLang : "so");
 applyLang(document.getElementById("langSelect").value);
 
