--- a/atorvastatin.html
+++ b/atorvastatin.html
@@ -215,7 +215,7 @@ const T = {
     sec4Title: "Isdhexgalka daawooyinka (Interaktioner)",
     sec4: [
       "Daawooyin qaar (tusaale antibiyootiko gaar ah, daawooyinka fangaska, iyo qaar HIV) waxay kordhin karaan saameynta atorvastatin.",
-      "Xaddid <span class='highlight'>liin baanbeelmo (grapefrugt)</span> sababtoo ah waxay kordhin kartaa heerka daawada."
+      "Ka fogow ama xaddid <span class='highlight'>liin baanbeelmo (grapefrugt)</span>, sababtoo ah waxay kordhin kartaa heerka daawada (dadka qaar)."
     ],
 
     sec5Title: "Digniino (Advarsler)",
@@ -233,13 +233,13 @@ const T = {
     sec7Title: "Cunto iyo cabitaan (Mad og drikke)",
     sec7: [
       "Waxaa lagu qaadan karaa <span class='highlight'>cunto la’aan ama cunto la socota</span>.",
-      "Xaddid <span class='highlight'>liin baanbeelmo (grapefrugt)</span> iyo khamri badan."
+      "Ka fogow ama xaddid grapefrugt, kana taxaddar khamri badan."
     ],
 
     sec8Title: "Kaydinta daawada (Opbevaring)",
     sec8: [
       "Ku hay meel qalalan, ka fog carruurta, kana hooseysa <span class='highlight'>25°C</span>.",
-      "Ha isticmaalin ka dib taariikhda <span class='highlight'>EXP</span>; wixii haray weydii farmashiyaha."
+      "Ha isticmaalin daawada marka ay dhaafto <span class='highlight'>taariikhda dhicitaanka/expiration date</span>. Wixii haray, weydii farmashiyaha."
     ],
 
     footer1: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
@@ -277,7 +277,7 @@ const T = {
     sec4Title: "Interaktioner",
     sec4: [
       "Nogle lægemidler (fx visse antibiotika, svampemidler og nogle HIV-midler) kan øge virkningen/bivirkningerne.",
-      "Undgå eller begræns <span class='highlight'>grapefrugt</span>, da det kan øge niveauet af atorvastatin."
+      "Undgå eller begræns <span class='highlight'>grapefrugt</span>, da det kan øge niveauet af atorvastatin hos nogle."
     ],
 
     sec5Title: "Advarsler",
@@ -298,10 +298,10 @@ const T = {
       "Begræns grapefrugt og alkohol i større mængder."
     ],
 
-    sec8Title: "Opbevaring og rengøring",
+    sec8Title: "Opbevaring",
     sec8: [
       "Opbevar tørt, utilgængeligt for børn og under <span class='highlight'>25°C</span>.",
-      "Brug ikke efter udløbsdato (EXP). Spørg apoteket om bortskaffelse."
+      "Brug ikke medicinen efter <span class='highlight'>udløbsdatoen</span>. Spørg apoteket om bortskaffelse af rester."
     ],
 
     footer1: "Hvis du har brug for mere information, kontakt apoteket eller din læge.",
@@ -339,7 +339,7 @@ const T = {
     sec4Title: "Interactions",
     sec4: [
       "Some medicines (e.g., certain antibiotics, antifungals, and some HIV medicines) can increase effects/side effects.",
-      "Avoid or limit <span class='highlight'>grapefruit</span>, as it can increase atorvastatin levels."
+      "Avoid or limit <span class='highlight'>grapefruit</span>, as it may increase atorvastatin levels in some people."
     ],
 
     sec5Title: "Warnings",
@@ -360,10 +360,10 @@ const T = {
       "Limit grapefruit and heavy alcohol intake."
     ],
 
-    sec8Title: "Storage and cleaning",
+    sec8Title: "Storage",
     sec8: [
       "Store dry, out of reach of children, below <span class='highlight'>25°C</span>.",
-      "Do not use after EXP. Ask your pharmacy about disposal."
+      "Do not use after the <span class='highlight'>expiry date</span>. Ask your pharmacy about disposal."
     ],
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
@@ -401,7 +401,7 @@ const T = {
     sec4Title: "التداخلات",
     sec4: [
       "بعض المضادات الحيوية/مضادات الفطريات وأدوية HIV قد تزيد التأثير/الأعراض الجانبية.",
-      "تجنب أو قلل <span class='highlight'>الجريب فروت</span> لأنه قد يزيد مستوى الدواء."
+      "تجنب أو قلل <span class='highlight'>الجريب فروت</span> لأنه قد يزيد مستوى الدواء عند بعض الأشخاص."
     ],
 
     sec5Title: "تحذيرات",
@@ -422,10 +422,10 @@ const T = {
       "قلل الجريب فروت والكحول بكميات كبيرة."
     ],
 
-    sec8Title: "الحفظ والتنظيف",
+    sec8Title: "الحفظ",
     sec8: [
       "يحفظ في مكان جاف وبعيداً عن الأطفال وتحت 25°م.",
-      "لا تستخدمه بعد تاريخ الانتهاء (EXP)."
+      "لا تستخدمه بعد <span class='highlight'>تاريخ الانتهاء</span>. اسأل الصيدلية عن طريقة التخلص من البقايا."
     ],
 
     footer1: "للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
@@ -463,7 +463,7 @@ const T = {
     sec4Title: "Etkileşimler",
     sec4: [
       "Bazı antibiyotikler, mantar ilaçları ve bazı HIV ilaçları etkileri artırabilir.",
-      "<span class='highlight'>Greyfurt</span> tüketimini azaltın/kaçının."
+      "<span class='highlight'>Greyfurt</span> tüketimini azaltın/kaçının (bazı kişilerde)."
     ],
 
     sec5Title: "Uyarılar",
@@ -484,10 +484,10 @@ const T = {
       "Greyfurtu ve fazla alkolü sınırlayın."
     ],
 
-    sec8Title: "Saklama ve temizlik",
+    sec8Title: "Saklama",
     sec8: [
       "Kuru yerde, çocuklardan uzak, 25°C altında saklayın.",
-      "Son kullanma tarihinden (EXP) sonra kullanmayın."
+      "<span class='highlight'>Son kullanma tarihinden</span> sonra kullanmayın. İmha için eczaneye danışın."
     ],
 
     footer1: "Daha fazla bilgi için eczane veya doktorunuza başvurun.",
@@ -525,7 +525,7 @@ const T = {
     sec4Title: "دواؤں کے باہمی اثرات",
     sec4: [
       "کچھ اینٹی بایوٹکس/فنگس کی دوائیں اور کچھ HIV دوائیں اثر بڑھا سکتی ہیں۔",
-      "<span class='highlight'>گریپ فروٹ</span> کم کریں یا پرہیز کریں۔"
+      "<span class='highlight'>گریپ فروٹ</span> کم کریں یا پرہیز کریں (کچھ افراد میں)."
     ],
 
     sec5Title: "احتیاطیں",
@@ -546,10 +546,10 @@ const T = {
       "گریپ فروٹ اور زیادہ الکحل سے پرہیز کریں۔"
     ],
 
-    sec8Title: "محفوظ رکھنا اور صفائی",
+    sec8Title: "محفوظ رکھنا",
     sec8: [
       "خشک جگہ پر، بچوں سے دور، 25°C سے کم رکھیں۔",
-      "میعاد ختم ہونے (EXP) کے بعد استعمال نہ کریں۔"
+      "<span class='highlight'>میعاد ختم ہونے کی تاریخ</span> کے بعد استعمال نہ کریں۔ باقی دوا کے لیے فارمیسی سے پوچھیں۔"
     ],
 
     footer1: "مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
@@ -587,7 +587,7 @@ const T = {
     sec4Title: "تداخلات",
     sec4: [
       "برخی آنتی‌بیوتیک‌ها/داروهای ضدقارچ و بعضی داروهای HIV ممکن است اثر را افزایش دهند.",
-      "<span class='highlight'>گریپ‌فروت</span> را محدود کنید."
+      "<span class='highlight'>گریپ‌فروت</span> را محدود کنید (ممکن است سطح دارو را بالا ببرد)."
     ],
 
     sec5Title: "هشدارها",
@@ -608,10 +608,10 @@ const T = {
       "گریپ‌فروت و مصرف زیاد الکل را محدود کنید."
     ],
 
-    sec8Title: "نگهداری و تمیزکردن",
+    sec8Title: "نگهداری",
     sec8: [
       "در جای خشک، دور از کودکان و زیر 25°C نگهداری شود.",
-      "پس از تاریخ انقضا (EXP) مصرف نشود."
+      "پس از <span class='highlight'>تاریخ انقضا</span> مصرف نشود. برای دورریز مناسب از داروخانه بپرسید."
     ],
 
     footer1: "برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
@@ -649,7 +649,7 @@ const T = {
     sec4Title: "تداخلات",
     sec4: [
       "برخی انتی‌بیوتیک‌ها/دواهای ضدقارچ و بعضی دواهای HIV می‌تواند اثر را زیاد کند.",
-      "<span class='highlight'>گریپ‌فروت</span> را محدود کنید."
+      "<span class='highlight'>گریپ‌فروت</span> را محدود کنید (ممکن است سطح دوا را بالا ببرد)."
     ],
 
     sec5Title: "هشدارها",
@@ -670,10 +670,10 @@ const T = {
       "گریپ‌فروت و الکول زیاد را محدود کنید."
     ],
 
-    sec8Title: "نگهداری و پاک‌کاری",
+    sec8Title: "نگهداری",
     sec8: [
       "در جای خشک، دور از اطفال و زیر 25°C نگهداری شود.",
-      "بعد از تاریخ انقضا (EXP) استفاده نشود."
+      "بعد از <span class='highlight'>تاریخ انقضا</span> استفاده نشود. برای دور انداختن باقی‌مانده‌ها از دواخانه بپرسید."
     ],
 
     footer1: "برای معلومات بیشتر با دواخانه یا داکتر خود تماس بگیرید.",
@@ -711,7 +711,7 @@ const T = {
     sec4Title: "تداخلات",
     sec4: [
       "ځینې انټي‌بیوټیکونه/د فنګس ضد درمل او ځینې HIV درمل اغېزه زیاتولای شي.",
-      "<span class='highlight'>ګریپ فروټ</span> محدود کړئ."
+      "<span class='highlight'>ګریپ فروټ</span> محدود کړئ (په ځینو خلکو کې د دوا کچه لوړوي)."
     ],
 
     sec5Title: "خبرداری",
@@ -732,10 +732,10 @@ const T = {
       "ګریپ فروټ او ډېر الکول محدود کړئ."
     ],
 
-    sec8Title: "ساتنه او پاکول",
+    sec8Title: "ساتنه",
     sec8: [
       "په وچ ځای کې، له ماشومانو لرې او تر 25°C لاندې وساتئ.",
-      "د ختمېدو نېټې (EXP) وروسته مه کاروئ."
+      "د <span class='highlight'>ختمېدو نېټې</span> وروسته مه کاروئ. د پاتې درملو لپاره له درملتون څخه پوښتنه وکړئ."
     ],
 
     footer1: "د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
@@ -793,13 +793,16 @@ function applyLang(lang){
   document.getElementById("footer1").textContent = d.footer1;
   document.getElementById("footer2").innerHTML = d.footer2;
 
+  // keep language when going back
   const backA = document.querySelector("a.back");
   const base = backA.getAttribute("href").split("?")[0];
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
 }
 
+// Start language from ?lang=
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
+
 document.getElementById("langSelect").value = (T[startLang] ? startLang : "so");
 applyLang(document.getElementById("langSelect").value);
 
